--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -63,6 +63,14 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok-maven</artifactId>
+			<version>1.18.10.0</version>
+			<type>pom</type>
+		</dependency>
+
 	</dependencies>
 
 	<build>
