--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-validation": "^3.0.7",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "validator": "^12.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
