--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.datasource.initialization-mode= always
 spring.datasource.continue-on-error= true
 
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
-#spring.datasource.schema=classpath:/schema-postgresql.sql
+spring.datasource.schema=classpath:/schema-postgresql.sql
 
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql= true
