--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -43,6 +43,12 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core-java8</artifactId>
+			<version>1.0.0m1</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
@@ -69,6 +75,11 @@
 			<artifactId>lombok-maven</artifactId>
 			<version>1.18.10.0</version>
 			<type>pom</type>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
 		</dependency>
 
 	</dependencies>
