--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.datasource.schema=classpath:/schema-postgresql.sql
 spring.jpa.hibernate.ddl-auto= update
 spring.jpa.show-sql= true
 spring.jpa.generate-ddl= true
-spring.jpa.properies.hibernate.jdbc.lob.non_contextual_creation= true
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
